# TinyLearning

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
include/core/: function.h  functions.h  module.h  numerical_diff.h  optimizer.h  variable.h
include/core/functions/: add.h  broadcastTo.h  cos.h  div.h  exp.h  linear.h  matMul.h  meanSquaredError.h  mul.h  neg.h  pow.h  reshape.h  sigmoid.h  sin.h  square.h  sub.h  sum.h  sumTo.h  tanh.h  transpose.h
include/core/layers/: linear.h
include/core/models/: mlp.h
include/core/optimizers/: sgd.h
include/core/tensor/: tensor.h
include/graphviz/: graphviz.h
include/utils/: utils.h
src/: CMakeLists.txt
src/core/: function.cpp  functions.cpp  module.cpp  numerical_diff.cpp  optimizer.cpp  variable.cpp
src/core/functions/: add.cpp  broadcastTo.cpp  cos.cpp  div.cpp  exp.cpp  linear.cpp  matMul.cpp  meanSquaredError.cpp  mul.cpp  neg.cpp  pow.cpp  reshape.cpp  sigmoid.cpp  sin.cpp  square.cpp  sub.cpp  sum.cpp  sumTo.cpp  tanh.cpp  transpose.cpp
src/core/layers/: linear.cpp
src/core/models/: mlp.cpp
src/core/optimizers/: sgd.cpp
src/core/tensor/: tensor.cpp
src/graphviz/: graphviz.cpp
src/utils/: utils.cpp
